clusters/titania/apps/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grocy-ingress
spec:
 tls:
 - hosts:
   - grocy.cosmos.cboxlab.com
   secretName: grocy-tls-secret
 rules:
 - host: grocy.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: grocy
           port:
             name: http
       path: /
       pathType: Prefix
